<resources>
    <string name="app_name">Assignment4</string>
    <string name="shopping_app">Shopping App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add item</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>